--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "autonome-tweet-bot",
     "version": "1.0.0",
-    "description": "Automated tweet bot using Autonome agent",
-    "main": "index.js",
+    "engines": {
+      "node": "18.x"
+    },
     "scripts": {
-      "start": "node index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node index.js"
     },
     "dependencies": {
       "axios": "^1.6.7",
